Fixed form and list arrows on smaller mobile devices

--- a/resources/style.css
+++ b/resources/style.css
@@ -507,6 +507,11 @@ textarea:focus::placeholder {
         height: 3rem;
     }
 
+    li::before {
+        font-size: 2em;
+        top: 0.2em;
+    }
+
     form {
         padding: 0 0 2em 0;
     }
@@ -534,6 +539,10 @@ textarea:focus::placeholder {
 
     .bubble-box h3 {
         font-size: 1em;
+    }
+
+    input, textarea {
+        padding: 0.5em 2em 0.5em 0.5em;
     }
 
     #linked-in-img {
